--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   firebase_core: 2.27.1
   firebase_auth: 4.17.9
   fluttertoast: 8.2.4
-
+  excel: ^4.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
